--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<title>Asad Ali-ASP.Net Developer</title>
 
   <!-- Web Fonts -->
-  <!-- <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'> -->
+  <link href='assets/fonts/googlefontapi.css' rel='stylesheet' type='text/css'>
 	<!-- Bootstrap core CSS -->
 	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
 	<!-- Font Awesome CSS -->
@@ -401,7 +401,7 @@
               </div>
             </div>
 
-          <!-- <div class="row">
+          <div class="row">
             <div class="col-sm-12">
               <div class="location-map">
                 <div id="mapCanvas" class="map-canvas" hidden>
@@ -410,7 +410,7 @@
                 
               </div>
             </div>
-          </div> -->
+          </div>
 
           </div>
         </div><!-- /.row -->
@@ -449,9 +449,9 @@
   <script src="assets/js/jquery.easypiechart.js"></script>
   <script src="assets/js/jquery.shuffle.min.js"></script>
   <script src="assets/js/jquery.magnific-popup.min.js"></script>
-  <!-- <script src="http://a.vimeocdn.com/js/froogaloop2.min.js"></script> -->
+  <script src="assets/js/vimeocdn.min.js"></script>
   <script src="assets/js/jquery.fitvids.js"></script>
-  <!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script> -->
+  <script src="assets/js/googleapis.js"></script>
   <script src="assets/js/scripts.js"></script>
 </body>
 </html>
