--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <li><strong>Address:</strong> Lahore, Cantt Pakistan</li>
                 <li><strong>Nationality:</strong> Pakistan</li>
                 <li><strong>Phone:</strong> +92 306 4349216</li>
-                <li><strong>Email:</strong> 2016asadali@gmail.com</li>
+                <li><strong>Email:</strong> asad-ali.1@outlook.com</li>
               </ul>
             </div>
           </div> <!-- col-md-4 -->
@@ -148,7 +148,7 @@
                 <li>Azure DevOps</li>
                 <li>GitHub</li>
                 <li>GitLab</li>
-                <li>SQL (Store Procedures, Triggers, Auto Json, Complex Queries)</li>
+                <li>SQL (Store Procedures, Triggers, Auto Json, Complex Queries, Data Analysis)</li>
 
               </ul>
             </div>
@@ -159,7 +159,7 @@
 
             <div class="download-button">
               <a class="btn btn-info btn-lg" href="#contact"><i class="fa fa-paper-plane"></i>Send me message</a>
-              <a class="btn btn-primary btn-lg" href="#"><i class="fa fa-download"></i>download my cv</a>
+              <a class="btn btn-primary btn-lg" href="https://drive.google.com/open?id=1jds2CejNyizGrC97LS6KVhai-SSaKvix"><i class="fa fa-download"></i>download my cv</a>
             </div>
           </div>
 
@@ -256,7 +256,7 @@
                                     <div class="timeline-content">
                                         <div class="timeline-heading">
                                             <h3>PRAXIS Logics Lahore, Pakistan</h3>
-                                            <span>ASP.Net Core, Software Developer</span>
+                                            <span>ASP.Net Core + ASP.Net MVC 5, Software Developer</span>
                                         </div><!-- /timeline-heading -->
 
                                         <div class="timeline-body">
@@ -294,7 +294,7 @@
                                     <div class="timeline-content">
                                         <div class="timeline-heading">
                                             <h3>BritSol, Uniked Kingdom </h3>
-                                            <span>Web Designing and ASP.Net, Software Developer</span>
+                                            <span>Web Designing and ASP.Net MVC 5, Software Developer</span>
                                         </div><!-- /timeline-heading -->
 
                                         <div class="timeline-body">
